Divs bg-white and overflow-x fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,6 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  overflow-x: hidden;
 }
 
 a {
@@ -109,27 +108,6 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
-  }
-}
-
-@layer components {
-  .projectimages {
-    @apply m-5 rounded-lg w-[80%];
-  }
-  .projectdivs {
-    @apply text-center shadow-2xl my-10 p-5 mx-10 bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-yellow-200 via-green-200 to-green-300 rounded-lg md:mx-40 lg:mx-10 basis-1/3 flex-1 flex items-center justify-center flex-col;
-  }
-  .projectcode {
-    @apply bg-gradient-to-r from-cyan-500 to-teal-500 text-white px-4 py-2 rounded-md m-8;
-  }
-  .projectwebsite {
-    @apply bg-gradient-to-r from-cyan-500 to-teal-500 text-white px-4 py-2 rounded-md m-8;
-  }
-  .projecttextheader {
-    @apply text-gray-800 py-1 text-xl font-bold;
-  }
-  .projecttext {
-    @apply text-black;
   }
 }
 
